--- a/live_files/embed.html
+++ b/live_files/embed.html
@@ -2,7 +2,7 @@
 <html> 
 <head>
   
-<title>YOUR TITLE GOES HERE</title> 
+<title>EL BINGO DEL DEBATE</title> 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css' />
 <link rel="stylesheet" href="css/embed.css">
