--- a/live_files/embed.html
+++ b/live_files/embed.html
@@ -41,8 +41,8 @@ function embedBox() {
 }
 var mapdrawn = false;
 var printable = false;
-var basemap_location = "http://mysite.url/newcard.html";
-var embedmap_location = "http://mysite.url/embed.html";
+var basemap_location = "https://github.com/Vanesuki/bingo2/tree/master/newcard.html";
+var embedmap_location = "https://github.com/Vanesuki/bingo2/tree/master/embed.html";
 var embed_size = 785;
 </script>
 
